--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
+#background {
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+}
+
 h1 {
-    color: blue;
+    position: relative;
+    color: white;
+    text-align: center;
+    padding-top: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+
+}
+
+.cards{
+    height: 20vh;
+    width: 12vw;
 }
