--- a/public/styles.css
+++ b/public/styles.css
@@ -1,25 +1,48 @@
 html, body {
     margin: 0px;
     padding: 0px;
-    margin-top: -25px;
-   
+    overflow: hidden;
+    background-image: url('./assets/vecteezy.jpg');
+    background-position: center center;
+    background-size: 2500px;
+    background-repeat: no-repeat;
+    margin-top: 10px;
 }
 
-#background {
-    z-index: -1;
-    height: 100vh;
-    width: 100vw;
+/* #background {
+    z-index: -2;
+    height: 120vh;
+    width: 120vw;
     position: absolute;
-    margin: 0px;
-    padding: 0px;
+    
+} */
+
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -40px;
+    
 }
+
+/* #pokerTable {
+    z-index: -1;
+    position:absolute;
+    height: 90vh;
+
+} */
+
 
 h1 {
     position: relative;
     color: tan;
     text-align: center;
-    padding-top: 30px;
-    font-size: 4em;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    font-size: 5em;
+    text-shadow: 2px 2px 2px white;
+    
+   
     
 }
 
@@ -28,28 +51,30 @@ h1 {
     flex-direction: column;
     align-items: center;
    
+   
 }
 
 .cardSet {
     margin: 10px;
+    /* padding-top: 10px; */
 }
 .cards {
-    height: 250px;
-    width: 170px;
+    height: 220px;
+    width: 150px;
 }
 
 #buttons {
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 60px;
    
 }
 
-#betting {
+/* #betting {
     display: flex;
     justify-content: center;
     padding-top: 20px;
-}
+} */
 
 button {
     margin: 5px;
@@ -58,4 +83,13 @@ button {
     color: navy;
     font-size: 2em;
     border-radius: 20px;
+}
+
+a {
+   
+    color: white;
+}
+
+#links {
+    text-align: end;
 }
