--- a/public/styles.css
+++ b/public/styles.css
@@ -6,16 +6,9 @@ html, body {
     background-position: center center;
     background-size: 2500px;
     background-repeat: no-repeat;
-    margin-top: 10px;
+    margin-top: 20px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
-/* #background {
-    z-index: -2;
-    height: 120vh;
-    width: 120vw;
-    position: absolute;
-    
-} */
 
 #container {
     display: flex;
@@ -23,16 +16,7 @@ html, body {
     justify-content: center;
     align-items: center;
     margin-top: -40px;
-    
 }
-
-/* #pokerTable {
-    z-index: -1;
-    position:absolute;
-    height: 90vh;
-
-} */
-
 
 h1 {
     position: relative;
@@ -41,33 +25,27 @@ h1 {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
     font-size: 5em;
     text-shadow: 2px 2px 2px white;
-    
-   
-    
 }
 
 #table {
     display: flex;
     flex-direction: column;
     align-items: center;
-   
-   
 }
 
 .cardSet {
     margin: 10px;
-    /* padding-top: 10px; */
 }
 .cards {
     height: 220px;
     width: 150px;
 }
 
+
 #buttons {
     display: flex;
     justify-content: center;
     padding-top: 60px;
-   
 }
 
 /* #betting {
@@ -85,8 +63,14 @@ button {
     border-radius: 20px;
 }
 
+#scoreboard {
+    background-color: white;
+    width: 260px;
+    height: 120px;
+    position: absolute;
+}
+
 a {
-   
     color: white;
 }
 
