--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -43,6 +43,25 @@
   height: 50vh;
 }
 
+.cardSet {
+  transition: ease 2s all;
+}
+
+#scoreboard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  padding-top: 6vh;
+  width: 30vw;
+  height: 15vh;
+  position: fixed;
+  bottom: 5rem;
+  left: 5rem;
+  background-color: white;
+}
+
 footer {
   color: white;
   text-decoration: none;
