working on cards

--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -10,6 +10,9 @@
   width: 6vw;
   flex-shrink: 2;
   flex-grow: 1;
+  transition: all 1s ease;
+  transform: rotateY(360);
+  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.8);
 }
 
 #container {
@@ -45,6 +48,7 @@
 
 .cardSet {
   transition: ease 2s all;
+  padding-bottom: 2rem;
 }
 
 #scoreboard {
