--- a/public/styles/scss/_cards.scss
+++ b/public/styles/scss/_cards.scss
@@ -3,4 +3,8 @@
     width: 6vw;
     flex-shrink: 2;
     flex-grow: 1;
+    transition: all 1s ease;
+    transform: rotateY(360);
+    
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.8);
 }
