--- a/public/styles/scss/main.scss
+++ b/public/styles/scss/main.scss
@@ -15,11 +15,12 @@
     
 
     h1 {
-        font-size: 5vh;
+        font-size: 6vh;
         color: white;
         text-align: center;
         position: fixed;
-        top: 1rem;
+        top: 5rem;
+        text-shadow: $shadow;
     }
 }
 
@@ -35,7 +36,7 @@
 }
 
 .cardSet {
-    transition: ease 2s all;
+    transition: ease .5s all;
     padding-bottom: 2rem;
 }
 
@@ -75,7 +76,7 @@
     align-items: center;
     flex-direction: column;
     border-radius: 10px;
-    
+    box-shadow:  $shadow;
     width: 25vw;
     height: 8vh;
     position: fixed;
