--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -5,6 +5,13 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
 .cards {
   height: 10vh;
   width: 6vw;
