--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -1,15 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+.cardSet {
+  transition: ease 0.5s all;
+  padding-bottom: 2rem;
 }
 
 .cards {
@@ -20,6 +11,46 @@
   transition: all 1s ease;
   transform: rotateY(360);
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.8);
+  margin: 5px;
+}
+.cards:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  height: 10vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 10px 10px 0 0;
+}
+#buttons button {
+  width: 50%;
+  height: 100%;
+  border: none;
+  background: none;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: ease 0.5s all;
+}
+#buttons button:hover {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 #container {
@@ -52,39 +83,6 @@
   padding-top: 2vh;
   width: 80vw;
   height: 50vh;
-}
-
-.cardSet {
-  transition: ease 0.5s all;
-  padding-bottom: 2rem;
-}
-
-#buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  width: 100%;
-  height: 10vh;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  border-radius: 10px 10px 0 0;
-}
-#buttons button {
-  width: 50%;
-  height: 100%;
-  border: none;
-  background: none;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: ease 0.5s all;
-}
-#buttons button:hover {
-  background: rgba(0, 0, 0, 0.8);
 }
 
 #scoreboard {
