--- a/public/styles/scss/_buttons.scss
+++ b/public/styles/scss/_buttons.scss
@@ -1,3 +1,7 @@
+@function button-hover($color) {
+    @return mix($color, $btnhover, 100%)
+}
+
 #buttons {
     @include flexCenterRow;
     width: 100%;
@@ -9,8 +13,8 @@
     border-radius: 10px 10px 0 0;
 
     button {
-        width: 50%;
-        height: 100%;
+        width: 20vw;
+        height: 10vh;
         border: none;
         background: none;
         color: $light;
@@ -20,7 +24,8 @@
         transition: ease 0.5s all;
 
         &:hover {
-            background: $btnhover;
+            background: button-hover($btn);
+            // background: $btnhover;
         }
     }
 }
